# system-monitor

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  TODO.md  dashboard.html
.cargo/: config.toml
.github/: publish.json
.github/workflows/: secret-scan.yml
scripts/: shield-registry.ps1
scripts/test/: test-T001-rust-skeleton.sh  test-T002-process-snapshot.sh  test-T003-process-tree.sh  test-T004-classifier.sh  test-T005-cli-procs.sh  test-T006-etw-listener.sh  test-T007-uac-tracker.sh  test-T008-daemon.sh  test-T009-alerts.sh  test-T010-metrics.sh  test-T011-baseline.sh  test-T012-status.sh  test-T015-ioc-monitor.sh  test-T017-focus-guard.sh
scripts/test/archive/: test-T001-project-skeleton.sh  test-T002-uac-event-query.sh  test-T004-process-tree-module.sh  test-T005-uac-attribution.sh  test-T006-cli-uac.sh  test-T007-json-log-writer.sh
specs/brain-integration-api/: spec.md  tasks.md
specs/claude-tab-collision/: spec.md
specs/dashboard-ux-fixes/: spec.md  tasks.md
specs/disk-monitor/: spec.md
specs/focus-guard-dashboard/: spec.md  tasks.md
specs/ioc-monitor/: spec.md  tasks.md
specs/system-health-agent/: spec.md  tasks.md
specs/vpn-monitor/: spec.md  tasks.md
src/: main.rs
src/modules/: classifier.rs  claude_sessions.rs  cmd_diagnosis.rs  daemon.rs  disk_monitor.rs  focus_enforcer.rs  focus_guard.rs  ioc_monitor.rs  mod.rs  process_monitor.rs  process_tree.rs  status.rs  tray.rs  uac_tracker.rs  vpn_monitor.rs
